--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   flex-flow: column;
   height: 100vh;
-  background-image: url('/images/site-background.jpg');
+  background-image: url('../background.png');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
